--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "my-project",
+  "name": "student-portal-frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "homepage": "/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "preview": "vite preview",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "start": "vite preview --port 3000 --host"
   },
   "dependencies": {
     "react": "^19.1.1",
